@@ -11,6 +11,7 @@ import javax.lang.model.element.Element;
 import javax.tools.FileObject;
 
 import com.predic8.membrane.annot.model.AttributeInfo;
+import com.predic8.membrane.annot.model.ChildElementDeclarationInfo;
 import com.predic8.membrane.annot.model.ChildElementInfo;
 import com.predic8.membrane.annot.model.ElementInfo;
 import com.predic8.membrane.annot.model.MainInfo;
@@ -53,11 +54,23 @@ public class Parsers {
 							"\r\n" + 
 							"package " + main.getAnnotation().outputPackage() + ";\r\n" + 
 							"\r\n" + 
+							"/**\r\n" +
+							"  * Automatically generated by " + Parsers.class.getName() + ".\r\n" +
+							"  */\r\n" + 
 							"public class NamespaceHandlerAutoGenerated {\r\n" + 
 							"\r\n" + 
 							"	public static void registerBeanDefinitionParsers(NamespaceHandler nh) {\r\n");
 					for (ElementInfo i : main.getIis()) {
-						bw.write("		nh.registerBeanDefinitionParser2(\"" + i.getAnnotation().name() + "\", new " + i.getParserClassSimpleName() + "());\r\n");
+						if (i.getAnnotation().global()) {
+							bw.write("		nh.registerGlobalBeanDefinitionParser(\"" + i.getAnnotation().name() + "\", new " + i.getParserClassSimpleName() + "());\r\n");
+						} else {
+							for (ChildElementDeclarationInfo cedi : i.getUsedBy()) {
+								for (ChildElementInfo cei : cedi.getUsedBy()) {
+									String clazz = cei.getEi().getElement().getQualifiedName().toString();
+									bw.write("		nh.registerLocalBeanDefinitionParser(\"" + clazz + "\", \"" + i.getAnnotation().name() + "\", new " + i.getParserClassSimpleName() + "());\r\n");
+								}
+							}
+						}
 					}
 					bw.write(
 							"	}\r\n" + 
@@ -115,6 +128,9 @@ public class Parsers {
 							bw.write("import com.predic8.membrane.core.config.spring.*;\r\n");
 						bw.write(
 								"\r\n" + 
+										"/**\r\n" +
+										"  * Automatically generated by " + Parsers.class.getName() + ".\r\n" +
+										"  */\r\n" + 
 										"public class " + ii.getParserClassSimpleName() + " extends AbstractParser {\r\n" + 
 										"\r\n" + 
 										"	protected Class<?> getBeanClass(org.w3c.dom.Element element) {\r\n" + 
