@@ -58,6 +58,8 @@ public class Schemas {
 				"	targetNamespace=\"" + namespace + "\"\r\n" + 
 				"	elementFormDefault=\"qualified\" attributeFormDefault=\"unqualified\">\r\n" + 
 				"\r\n" + 
+				"	<!-- Automatically generated by " + Schemas.class.getName() + ". -->\r\n" + 
+				"\r\n" + 
 				"	<xsd:import namespace=\"http://www.springframework.org/schema/beans\" schemaLocation=\"http://www.springframework.org/schema/beans/spring-beans-3.1.xsd\" />\r\n" + 
 				"\r\n" + 
 				"${declarations}\r\n" +
@@ -76,10 +78,6 @@ public class Schemas {
 	private void assembleXSD(Model m, MainInfo main, BufferedWriter bw) throws IOException, ProcessingException {
 		String xsd = getXSDTemplate(main.getAnnotation().targetNamespace()); 
 		xsd = xsd.replace("${declarations}", assembleDeclarations(m, main));
-		for (String group : main.getGroups().keySet()) {
-			xsd = xsd.replace("${" + group + "Declarations}", "");
-			xsd = xsd.replace("${" + group + "References}", assembleInterceptorReferences(m, main, group));
-		}
 		bw.append(xsd);
 	}
 
@@ -102,21 +100,37 @@ public class Schemas {
 			if (i.getAis().size() > 0 || i.getCeis().size() > 0 || i.getAnnotation().mixed()) {
 				xsd = assembleElementInfo(m, main, i);
 			} else {
-				return "<xsd:element name=\""+ i.getAnnotation().name() + "\" type=\"EmptyElementType\" />\r\n";
+				if (i.getAnnotation().global())
+					return "<xsd:element name=\""+ i.getAnnotation().name() + "\" type=\"EmptyElementType\" />\r\n";
+				else
+					return 
+							"<xsd:complexType name=\""+ i.getXSDTypeName(m) +"\">\r\n" +
+							"	<xsd:complexContent>\r\n" +
+							"		<xsd:extension base=\"EmptyElementType\">\r\n" +
+							"		</xsd:extension>\r\n" +
+							"	</xsd:complexContent>\r\n" +
+							"</xsd:complexType>\r\n";
 			}
 		} else {
 			xsd = i.getAnnotation().xsd();
 		}
-		return
-				"<xsd:element name=\""+ i.getAnnotation().name() +"\">\r\n" + 
-				"	<xsd:complexType>\r\n" + 
+		String defHeader, defFooter;
+		if (i.getAnnotation().global()) {
+			defHeader = "<xsd:element name=\""+ i.getAnnotation().name() +"\">\r\n" + 
+					"	<xsd:complexType>\r\n";
+			defFooter = "	</xsd:complexType>\r\n" + 
+					"</xsd:element>\r\n";
+		} else {
+			defHeader = "<xsd:complexType name=\""+ i.getXSDTypeName(m) +"\">\r\n";
+			defFooter = "</xsd:complexType>\r\n"; 
+		}
+		return defHeader +
 				"		<xsd:complexContent " + (i.getAnnotation().mixed() ? "mixed=\"true\"" : "") + ">\r\n" + 
 				"			<xsd:extension base=\"beans:identifiedType\">\r\n" + 
 				xsd +
 				"			</xsd:extension>\r\n" + 
 				"		</xsd:complexContent>\r\n" + 
-				"	</xsd:complexType>\r\n" + 
-				"</xsd:element>\r\n";
+				defFooter;
 	}
 
 	private String assembleElementInfo(Model m, MainInfo main, AbstractElementInfo i) {
@@ -124,8 +138,12 @@ public class Schemas {
 		xsd.append("<xsd:sequence>\r\n");
 		for (ChildElementInfo cei : i.getCeis()) {
 			xsd.append("<xsd:choice" + (cei.isRequired() ? " minOccurs=\"1\"" : " minOccurs=\"0\"") + (cei.isList() ? " maxOccurs=\"unbounded\"" : "") + ">\r\n");
-			for (ElementInfo ei : main.getChildElementDeclarations().get(cei.getTypeDeclaration()).getElementInfo())
-				xsd.append("<xsd:element ref=\"" + ei.getAnnotation().name() + "\" />\r\n");
+			for (ElementInfo ei : main.getChildElementDeclarations().get(cei.getTypeDeclaration()).getElementInfo()) {
+				if (ei.getAnnotation().global())
+					xsd.append("<xsd:element ref=\"" + ei.getAnnotation().name() + "\" />\r\n");
+				else
+					xsd.append("<xsd:element name=\"" + ei.getAnnotation().name() + "\" type=\"" + ei.getXSDTypeName(m) + "\" />\r\n");
+			}
 			if (cei.getAnnotation().allowForeign())
 				xsd.append("<xsd:any namespace=\"##other\" processContents=\"strict\" />\r\n");
 			xsd.append("</xsd:choice>\r\n");
@@ -141,14 +159,6 @@ public class Schemas {
 		// TODO: default value
 		return "<xsd:attribute name=\"" + ai.getXMLName() + "\" type=\"" + ai.getXSDType(processingEnv.getTypeUtils()) + "\" "
 				+ (ai.isRequired() ? "use=\"required\"" : "") + " />\r\n";
-	}
-
-	private String assembleInterceptorReferences(Model m, MainInfo main, String group) {
-		StringWriter interceptorReferences = new StringWriter();
-		for (ElementInfo i : main.getGroups().get(group)) {
-			interceptorReferences.append("<xsd:element ref=\"" + i.getAnnotation().name() + "\" />\r\n");
-		}
-		return interceptorReferences.toString();
 	}
 
 }
