@@ -14,10 +14,9 @@
 
 package com.predic8.membrane.servlet.test.config.spring;
 
-import org.springframework.beans.factory.xml.BeanDefinitionParser;
-import org.springframework.beans.factory.xml.NamespaceHandlerSupport;
+import com.predic8.membrane.annot.AbstractNamespaceHandler;
 
-public class NamespaceHandler extends NamespaceHandlerSupport {
+public class NamespaceHandler extends AbstractNamespaceHandler {
 
 	public void init() {
 		// If you get a compiler error in the following line, enable Annotation Processing
@@ -25,7 +24,4 @@ public class NamespaceHandler extends NamespaceHandlerSupport {
 		NamespaceHandlerAutoGenerated.registerBeanDefinitionParsers(this);
 	}
 	
-	public void registerBeanDefinitionParser2(String elementName, BeanDefinitionParser parser) {
-		registerBeanDefinitionParser(elementName, parser);
-	}
 }
